Fix Bug #55382 Assignment with SELECT expressions takes unexpected S locks in READ COMMITTED

rb://410 Approved by Sunny Bains